--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build && npm run copy-redirects",
+    "copy-redirects": "cpy public/_redirects dist/",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
